<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedFragment"

    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/uba"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:showDividers="middle"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Para estudiar en Argentina te recomendamos que uses alguno de los portales mas conocidos:"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            />
        <TextView
            android:id="@+id/imageButtonUM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/um"
            android:textSize="40sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/primaryTrans"
            android:textColor="@color/primaryTextColor"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/imageButtonUTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/utn"
            android:textSize="40sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/primaryTrans"
            android:textColor="@color/primaryTextColor"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/imageButtonUBA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uba"
            android:textSize="40sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/primaryTrans"
            android:textColor="@color/primaryTextColor"
            android:layout_margin="10dp"
            />
    </LinearLayout>
</FrameLayout>